# centraal

./: .gitignore  LICENSE  README.md
.github/workflows/: lint.yml
tools/centraal/: .gitignore  .pre-commit-config.yaml  README.MD  pyproject.toml
tools/centraal/centraal/: __init__.py  __main__.py
tools/centraal/centraal/common/: sshconfig.py  sshconsole.py
tools/centraal/centraal/master/: init.py
tools/centraal/src/: __init__.py
tools/centraal/src/centraal/: __main__.py
tools/centraal/src/centraal/common/: sshconfig.py
tools/centraal/src/centraal/master/: init.py
tools/centraal/src/common/: sshconfig.py  sshconsole.py
tools/centraal/src/master/: init.py
