[project]
name = "centraal"
version = "0.0.1"
dependencies = [
    "build",
    "type-utils",
    "paramiko"
]
authors = [
  { name="gvsem", email="themrgeorgeous@gmail.com" },
]
description = "CLI for managing centraal clusters"
readme = "README.MD"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/gvsem/centraal"
Issues = "https://github.com/gvsem/centraal/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"