[tool.poetry]
name = "centraal"
version = "0.1.0"
description = "CLI for managing centraal clusters"
authors = ["Georgii Semenov <themrgeorgeous@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
paramiko = "^3.4.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
